retrieveUnpackaged/objects/Waiver__c.object
<CustomObject>
    <fields>
        <fullName>CNCS_Approved_Date__c</fullName>
        <label>CNCS Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNCS_Justification__c</fullName>
        <label>CNCS Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grantee_Justification__c</fullName>
        <label>Grantee Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Minimum_Required_Match__c</fullName>
        <label>Minimum Required Match %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Project__r.Organization__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Waivers</relationshipLabel>
        <relationshipName>Waivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>AmeriCorps Alternative Match Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Leveraging Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Administrative Alternative Match Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severely Distressed Communities Match Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-grants Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Waiver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Waiver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>